--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         cutting-edge deliverables.</p>
                 </div>
                 <div class="our_benefits">
-                    <img src="/img/why_img.jpg" alt="">
+                    <img src="./img/why_img.jpg" alt="">
                     <div class="benefits">
                         <h4 class="why_title_h4">Our benefits</h4>
                         <p class="why_green_text">Incubate standards compliant
@@ -156,7 +156,7 @@
                 </div>
                 <div class="jew_conteiner">
                     <div>
-                        <img src="/img/jew1.png" alt="">
+                        <img src="./img/jew1.png" alt="">
                     </div>
                     <h4 class="jew_h4">Embossed hoop earrings</h4>
                     <p class="jew_price">$144.00</p>
@@ -166,7 +166,7 @@
                         new jewellery collection</h3>
                     <div class="conteiner2">
                         <div>
-                            <img src="/img/jew2.png" alt="">
+                            <img src="./img/jew2.png" alt="">
                         </div>
                         <h4 class="jew_h4">Embossed hoop earrings</h4>
                         <p class="jew_price">$144.00</p>
